manifests/05-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beat
  namespace: k8s-api
spec:
  replicas: 1
  selector:
    matchLabels: { app: beat }
  template:
    metadata:
      labels: { app: beat }
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: beat
          image: ghcr.io/amirmahdigolahmar/k8s-api:latest
          command: ["celery", "-A", "k8s_api", "beat", "--loglevel=info"]
          resources:
            requests: { cpu: 20m, memory: 64Mi }
            limits: { cpu: 100m, memory: 128Mi }
